# claw-code-cli

./: AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.de.md  README.es.md  README.fr.md  README.ja.md  README.ko.md  README.md  README.pt-BR.md  README.ru.md  README.tr.md  README.zh-CN.md  README.zh-TW.md  progress.txt  something_somewhere
.claude/: settings.local.json
.github/: .gitignore
.github/workflows/: github-notifications.yml  release.yml
crates/agent-provider/: Cargo.toml
crates/claude-cli/: Cargo.toml
crates/claude-cli/src/: config.rs  main.rs  onboarding.rs
crates/claw-cli/src/: main.rs
crates/clawcr-cli/src/: main.rs
crates/cli/: Cargo.toml
crates/cli/src/: agent.rs  agent_command.rs  config.rs  main.rs  prompt_command.rs
crates/client/src/: stdio.rs
crates/core/: Cargo.toml  models.json
crates/core/prompts/: hierarchical_agents_message.md
crates/core/prompts/compact/: prompt.md
crates/core/src/: lib.rs  model_catalog.rs  model_preset.rs  query.rs  response_item.rs  session.rs  update_check.rs
crates/core/src/config/: app.rs  tests.rs
crates/core/src/context/: agents_md.rs  compaction_summary.rs  execution_context.rs  mod.rs
crates/core/src/conversation/: mod.rs  records.rs
crates/core/src/history/: compaction.rs  mod.rs  normalize.rs  summarizer.rs
crates/core/tests/: real_llm_e2e.rs  update_plan_compaction.rs
crates/protocol/src/: approval.rs  connection.rs  event.rs  lib.rs  model.rs  permissions.rs  response.rs  session.rs  thinking.rs
crates/provider/: README.md
crates/provider/src/: request.rs
crates/provider/src/anthropic/: messages.rs
crates/provider/src/openai/: chat_completions.rs  responses.rs  shared.rs
crates/provider/src/openai/chat_completions/: stream.rs
crates/safety/: Cargo.toml
crates/safety/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: approval_reviewer.rs  bootstrap.rs  connection.rs  db.rs  event.rs  execution.rs  lib.rs  main.rs  persistence.rs  projection.rs  protocol.rs  runtime.rs  session.rs  titles.rs
crates/server/src/runtime/: handlers.rs  model_api.rs  plan.rs  turn_exec.rs
crates/server/src/runtime/handlers/: compaction.rs  session.rs  turn.rs
crates/server/tests/: end_to_end.rs  persistence_resume.rs  plan_integration.rs  protocol_contract.rs  skills_integration.rs
crates/tools/: Cargo.toml  README.md
crates/tools/src/: apply_patch.rs  bash.txt  file_write.rs  glob.rs  handler_kind.rs  invocation.rs  lib.rs  read.rs  registry.rs  registry_plan.rs  router.rs  shell_exec.rs  tool.rs  tool_summary.rs
crates/tools/src/handlers/: apply_patch.rs  bash.rs  exec_command.rs  file_write.rs  glob.rs  mod.rs  plan.rs  read.rs  shell_command.rs  webfetch.rs  websearch.rs
crates/tools/src/unified_exec/: buffer.rs  mod.rs  process.rs  store.rs  windows_pty.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  app_command.rs  chatwidget.rs  chatwidget_tests.rs  custom_terminal.rs  custom_terminal_clear_tests.rs  diff_render.rs  events.rs  history_cell.rs  host.rs  host_overlay.rs  input.rs  insert_history.rs  lib.rs  markdown_stream.rs  onboarding.rs  pager_overlay.rs  plan_tests.rs  render.rs  runtime.rs  selection.rs  slash_command.rs  startup_header.rs  status_indicator_widget.rs  tests.rs  tool_result_cell.rs  transcript.rs  tui.rs  worker.rs  worker_events.rs
crates/tui/src/bottom_pane/: approval_overlay.rs  bottom_pane_view.rs  chat_composer.rs  command_popup.rs  list_selection_view.rs  mod.rs  onboarding_view.rs
crates/tui/src/exec_cell/: mod.rs  render.rs  spinner.rs
crates/tui/src/render/: markdown.rs  mod.rs
crates/tui/src/streaming/: commit_tick.rs  controller.rs  mod.rs
crates/tui/src/tui/: event_stream.rs  frame_requester.rs
crates/utils/src/: config_paths.rs  home_dir.rs  sorting.rs
crates/utils/src/cli/: format_env_display.rs
docs/: README.es.md  README.fr.md  README.ja.md  README.ko.md  README.zh-CN.md  design-overview.md  spec-app-config.md  spec-context-management.md  spec-conversation.md  spec-interactive-tui-v2.md  spec-language-model.md  spec-overview-architecture.md  spec-response-item.md  spec-safety.md  spec-server-api.md  spec-tools.md  work-items-plan-item-events.md
docs/i18n/: README.es.md  README.fr.md  README.ja.md  README.ko.md
notifications/: github-meta.json
