[package]
name = "claude-cli"
description = "CLI entry point that assembles all crates"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "claude"
path = "src/main.rs"

[dependencies]
agent-core = { workspace = true }
agent-tools = { workspace = true }
agent-provider = { workspace = true }
agent-permissions = { workspace = true }
agent-tasks = { workspace = true }
agent-compact = { workspace = true }
tools-builtin = { workspace = true }

tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
dirs = "6"
