[package]
description = "Message model, session state, and agent main loop"
edition.workspace = true
license.workspace = true
name = "devo-core"
version.workspace = true

[dependencies]
devo-protocol = { workspace = true }
devo-provider = { workspace = true }
devo-safety = { workspace = true }
devo-tools = { workspace = true }
devo-utils = { workspace = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
iana-time-zone = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
smol_str = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
devo-provider = { workspace = true }
devo-safety = { workspace = true }
devo-tools = { workspace = true }
futures = { workspace = true }
pretty_assertions = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tempfile = { workspace = true }
uuid = { workspace = true }
