[package]
description = "Tool trait, registry, execution orchestration, and built-in tools"
edition.workspace = true
license.workspace = true
name = "devo-tools"
version.workspace = true

[dependencies]
devo-protocol = { workspace = true }
devo-provider = { workspace = true }
devo-safety = { workspace = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = "0.22"
chrono = { workspace = true }
futures = { workspace = true }
glob = { workspace = true }
portable-pty = "0.9"
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shlex = { workspace = true }
smol_str = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
